# NGU-Engine

./: CMakeLists.txt  Makefile  README.md
src/: Component.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h  TransformComponent.h  constants.h  game.cpp  game.h  main.cpp
